--- a/contact.html
+++ b/contact.html
@@ -252,7 +252,8 @@
 
 <div class="container">
     <h2>Camping Trip Booking Form</h2>
-    <form action="#" method="post">
+<form action="submit_booking.php" method="post">
+
         <label for="name">Full Name:</label>
         <input type="text" id="name" name="name" required placeholder="Enter your full name">
 
