--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
 <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About Camping</a>
-    <a href="table.html">Camping Toolss</a>
+    <a href="table.html">Camping Tools</a>
     <a href="contact.html">Booking Form</a>
 </nav>
 
